--- a/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
+++ b/src/app/pages/components/favorites/content-favorites/content-favorites.component.scss
@@ -1,5 +1,5 @@
 .surface-section {
-  padding: 2rem; /* px-4 */
+  padding: 2rem;
   border: 1px solid #e1e1e1;
   border-radius: 0.75rem;
 
@@ -15,7 +15,7 @@
 }
 
 .surface-section .p-4 {
-  padding: 1rem; /* p-4 */
+  padding: 1rem;
 }
 
 .surface-section .shadow-1 {
