--- a/src/app/pages/components/favorites/favorites-card/favorites-card.component.html
+++ b/src/app/pages/components/favorites/favorites-card/favorites-card.component.html
@@ -18,7 +18,7 @@
       <i class="pi text-2xl cursor-pointer ml-3 pi-trash" (click)="onDeleteExFavorites.emit(product.productId)"></i>
     </ng-container>
     <i
-      class="pi text-2xl cursor-pointer ml-3"
+      class="pi text-2xl cursor-pointer ml-3 mr-3"
       [ngClass]="{
         'pi-heart text-600': !liked,
         'pi-heart-fill text-red-500': liked
