--- a/src/app/pages/components/account/userpassword/userpassword.component.scss
+++ b/src/app/pages/components/account/userpassword/userpassword.component.scss
@@ -4,7 +4,7 @@ $danger-color: #e74c3c;
 $dark-text: #34495e;
 $light-text: #ecf0f1;
 $background-color: #ecf0f1;
-
+$breakpoint-tablet:768px;
 .box{
   display: flex;
   width: 100%;
@@ -12,6 +12,11 @@ $background-color: #ecf0f1;
   align-items: flex-start;
   justify-content: center;
   border-left: 1px solid  #d5d6d8;
+
+  @media (max-width: $breakpoint-tablet) {
+    border-left: none;
+  }
+
 }
 
 
