--- a/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
@@ -1,4 +1,4 @@
-<div class="orders-list">
+<div class="orders-list" *ngIf="ordersLoading">
   <h2>{{ "dGetorders.header" | transloco }}</h2>
 
   <div class="flex">
