--- a/src/app/home/reset-password/reset-password.component.html
+++ b/src/app/home/reset-password/reset-password.component.html
@@ -4,7 +4,7 @@
       class="block justify-content-center align-content-center text-2xl"
       style="background: transparent"
     >
-      <h2>Orion Innovation</h2>
+      <h2>Orion Shop</h2>
     </div>
     <span class="p-float-label mt-4">
       <i class="pi pi-envelope"></i>
