--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <p-toast></p-toast>
 <header class="header">
   <div>
-    <h1> Orion Innovation</h1>
+    <h1> Orion Shop</h1>
   </div>
 
   <div>
