google login done

--- a/src/app/admin/layout/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/admin/layout/components/orders-management/get-orders/get-orders.component.html
@@ -1,4 +1,4 @@
-<div class="orders-list">
+<div class="orders-list" *ngIf="ordersLoading">
   <h2>{{ "dGetorders.header" | transloco }}</h2>
 
   <div class="flex">
@@ -90,7 +90,7 @@
   </div>
 </div>
 <!--  -->
-<div class="card" *ngIf="!(orders && orders.length) && !ordersLoading">
+<div class="card" *ngIf="!(orders && orders.length) || !ordersLoading">
   <section class="page_404">
     <div class="container">
       <div class="row">
