--- a/src/app/admin/layout/components/users-management/get-users/get-users.component.scss
+++ b/src/app/admin/layout/components/users-management/get-users/get-users.component.scss
@@ -88,6 +88,8 @@ $module-color:#253741;
         text-align: center;
         background: $module-color;
         color: $background-color;
+        font-weight: 700;
+        letter-spacing: 0.7px;
       }
     }
   }
