--- a/src/app/home/register/register.component.scss
+++ b/src/app/home/register/register.component.scss
@@ -138,6 +138,7 @@ $module-color:#253741;
         background-color: $module-color;
         color: $light-text;
         font-size: 1rem;
+        font-weight: 700;
         border: none;
         border-radius: 4px;
         cursor: pointer;
