--- a/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
+++ b/src/app/dashboard/components/orders-management/get-orders/get-orders.component.html
@@ -89,7 +89,7 @@
     </div>
   </div>
 </div>
-<div class="card" *ngIf="!(orders && orders.length) && !ordersLoading">
+<div class="card" *ngIf="!(orders && orders.length) || !ordersLoading">
   <section class="page_404">
     <div class="container">
       <div class="row">
