--- a/src/app/home/login/login.component.scss
+++ b/src/app/home/login/login.component.scss
@@ -116,6 +116,7 @@ $module-color: #253741;
         color: $light-text;
         font-size: 1rem;
         border: none;
+        font-weight: 700;
         border-radius: 4px;
         cursor: pointer;
         transition: background-color 0.3s;
