--- a/src/app/home/reset-password/reset-password.component.scss
+++ b/src/app/home/reset-password/reset-password.component.scss
@@ -96,6 +96,7 @@ $module-color:#253741;
           background-color: $module-color;
           color: $light-text;
           font-size: 1rem;
+          font-weight: 700;
           border: none;
           border-radius: 4px;
           cursor: pointer;
