--- a/src/app/admin/layout/components/users-management/get-users/get-users.component.scss
+++ b/src/app/admin/layout/components/users-management/get-users/get-users.component.scss
@@ -19,6 +19,11 @@ $module-color:#253741;
 }
 :host ::ng-deep{
 
+  .role-dropdown{
+    width: 100%;
+    border: 1px solid $module-color;
+  }
+
   .p-paginator{
     background: $module-color;
     color: $background-color;
@@ -46,7 +51,7 @@ $module-color:#253741;
     width: 100%;
   }
   .p-dialog{
-    width: 400px;
+    width: 600px;
     background-color: $module-color;
   }
   .p-button-add{
@@ -119,55 +124,57 @@ $module-color:#253741;
 
 }
 
-/* Form Alanları */
+
 .p-field {
-  margin-bottom: 1.5rem; /* Form alanları arasındaki boşluk */
+  margin-bottom: 1.5rem;
 }
 
-/* Label Stilleri */
+
 label {
-  display: block; /* Label'ı blok element olarak görüntüle, alt alta sıralanmalarını sağla */
-  margin-bottom: 0.5rem; /* Label ile input arasındaki boşluk */
-  font-weight: bold; /* Kalın font ağırlığı */
+  display: block;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
 }
 
-/* Input Stilleri */
+
 form{
   .p-inputtext {
-    width: 100%; /* Input'ların genişliği */
-    padding: 0.5rem; /* Input içerisindeki içerik ile kenar arasındaki boşluk */
-    border: 1px solid $background-color; /* Kenarlık rengi */
-    border-radius: 0.25rem; /* Kenarlık köşe yuvarlaklığı */
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid $module-color;
+    border-radius: 0.25rem;
   }
 }
-/* CSS dosyanızda */
 .p-input-icon-left {
   display: flex;
   align-items: center;
 }
 
 .p-input-icon-left .pi {
-  margin-right: 5px; /* İkon ile input arasındaki boşluk */
+  margin-right: 5px;
 }
-/* Dropdown Stilleri */
 .p-dropdown {
-  width: 100%; /* Dropdown'ın genişliği */
-  margin-top: 0.5rem; /* Dropdown ile üstteki öğe arasındaki boşluk */
+  width: 100%;
+  margin-top: 0.5rem;
+  border: 1px solid $module-color;
 }
 
-/* Button Stilleri */
 .p-button {
-  margin-right: 0.5rem; /* Button'lar arasındaki boşluk */
+  margin-right: 0.5rem;
 }
 
-/* Success Button */
 .p-button-success {
-  background-color: #28a745; /* Başarı rengi (Bootstrap success rengi) */
-  color: #fff; /* Yazı rengi */
+  background-color: #28a745;
+  justify-content: center;
+  width: 48%;
+  margin: 5px;
+  color: #fff;
 }
 
-/* Danger Button */
 .p-button-danger {
-  background-color: #dc3545; /* Tehlike rengi (Bootstrap danger rengi) */
-  color: #fff; /* Yazı rengi */
+  background-color: #dc3545;
+  justify-content: center;
+  width: 48%;
+  margin: 5px;
+  color: #fff;
 }
